welcome.lessons.welcome.array.array667.Array667.scala.error
array667:2: error: value lenght is not a member of Array[Int]
  for (n<-0 to nums.lenght-1){
                    ^array667:4: error: type mismatch;
 found   : Boolean(true)
 required: Int
      return true
             ^array667:7: error: type mismatch;
 found   : Boolean(false)
 required: Int
  return false
         ^