welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  for (n<-0 to nums.lenght-1){
    if (nums(n)==6 &&nums(n+1)==6){
      return true
    }
  }
  return false
}
